--- a/index.html
+++ b/index.html
@@ -10,6 +10,8 @@
 <body>
   <header class="header">
 
+    <img src="images/trybewarts-header-logo.svg" class="trybewarts-header-logo">
+
   </header>
   
 </body>
