--- a/index.html
+++ b/index.html
@@ -12,7 +12,17 @@
 
     <img src="images/trybewarts-header-logo.svg" class="trybewarts-header-logo">
 
+    <form action="get" class="trybewarts-login">
+
+      <input id="inputLogin" type="text" placeholder="Login">
+      <input id="inputSenha" type="password" placeholder="Senha">
+      <button id="btnLogin">Enviar</button>
+
+
+
+    </form>
+
   </header>
-  
+  <script src="script.js"></script>
 </body>
 </html>
