--- a/index.html
+++ b/index.html
@@ -12,6 +12,9 @@
 
     <img src="images/trybewarts-header-logo.svg" class="trybewarts-header-logo">
 
+
+    <h1 id="trybewarts-header-title">Trybewarts</h1>
+
     <form action="get" class="trybewarts-login">
 
       <input id="inputLogin" type="text" placeholder="Login">
