--- a/index.html
+++ b/index.html
@@ -28,9 +28,12 @@
   </header>
   <main id = 'main'>
     <form id = 'evaluation-form' action = '' onsubmit = '' method = ''>
-      Nome:
+      Nome: <input id = "input-name" placeholder = "Nome">
+      Sobrenome: <input id = "input-lastname" placeholder = "Sobrenome">
+      Email: <input id = "input-email" placeholder = "Email">
     </form>
   </main>
+
 
   <script src="script.js"></script>
 </body>
