--- a/index.html
+++ b/index.html
@@ -8,28 +8,30 @@
   <link rel="stylesheet" href="style.css">
 </head>
 <body>
+
+  <!--Início do Header-->
   <header class="header">
-
     <img src="images/trybewarts-header-logo.svg" class="trybewarts-header-logo">
-
-
     <h1 id="trybewarts-header-title">Trybewarts</h1>
-
     <form action="get" class="trybewarts-login">
-
       <input id="inputLogin" type="text" placeholder="Login">
       <input id="inputSenha" type="password" placeholder="Senha">
       <button id="btnLogin">Enviar</button>
-
-
-
     </form>
-
   </header>
+<!--Final do Header-->
+<!--Início da Main-->
   <main id = 'main'>
+    <!--Início do Form-->
     <form id = 'evaluation-form' action = '' onsubmit = '' method = ''>
       Nome:
     </form>
+    <!--Final do Form-->
+
+
+  <div id="trybewartsLogoArea">
+    <img id="trybewarts-forms-logo" src="images/trybewarts-colored.svg">
+  </div>    
   </main>
 
   <script src="script.js"></script>
