--- a/index.html
+++ b/index.html
@@ -33,7 +33,18 @@
       Email: <input id = "input-email" placeholder = "Email">
     </form>
   </main>
-
+  <select id = "house">
+    <option id = "gitnoria-house"></option>
+    <option id = "reactpuff-house"></option>
+    <option id = "corvinode-house"></option>
+    <option id = "pytherina-house"></option>
+  </select>
+<!-- 
+  O select deverá conter o id house
+  Deverá conter a opção com text e value Gitnória e com o id gitnoria-house
+  Deverá conter a opção com text e value Reactpuff e com o id reactpuff-house
+  Deverá conter a opção com text e value Corvinode e com o id corvinode-house
+  Deverá conter a opção com text e value Pytherina e com o id pytherina-house -->
 
   <script src="script.js"></script>
 </body>
