--- a/index.html
+++ b/index.html
@@ -24,8 +24,10 @@
   <main id = 'main'>
     <!--Início do Form-->
     <form id = 'evaluation-form' action = '' onsubmit = '' method = ''>
-      Nome: <input id = "input-name" placeholder = "Nome">
-      Sobrenome: <input id = "input-lastname" placeholder = "Sobrenome">
+      <div class="nameArea">
+        Nome: <input id = "input-name" placeholder = "Nome">
+        Sobrenome: <input id = "input-lastname" placeholder = "Sobrenome">
+      </div>      
       Email: <input id = "input-email" placeholder = "Email">
     </form>
     <!--Final do Form-->
