--- a/index.html
+++ b/index.html
@@ -31,23 +31,28 @@
     <!--Final do Form-->
 
 
-  <div id="trybewartsLogoArea">
-    <img id="trybewarts-forms-logo" src="images/trybewarts-colored.svg">
-  </div>    
+    <div id="trybewartsLogoArea">
+      <img id="trybewarts-forms-logo" src="images/trybewarts-colored.svg">
+    </div>    
+    <select id = "house">
+      <option id = "gitnoria-house"></option>
+      <option id = "reactpuff-house"></option>
+      <option id = "corvinode-house"></option>
+      <option id = "pytherina-house"></option>
+    </select>
+
   </main>
-  <select id = "house">
-    <option id = "gitnoria-house"></option>
-    <option id = "reactpuff-house"></option>
-    <option id = "corvinode-house"></option>
-    <option id = "pytherina-house"></option>
-  </select>
-<!-- 
-  O select deverá conter o id house
-  Deverá conter a opção com text e value Gitnória e com o id gitnoria-house
-  Deverá conter a opção com text e value Reactpuff e com o id reactpuff-house
-  Deverá conter a opção com text e value Corvinode e com o id corvinode-house
-  Deverá conter a opção com text e value Pytherina e com o id pytherina-house -->
 
   <script src="script.js"></script>
 </body>
 </html>
+
+<!-- 14. Crie campo de entrada para avaliar de 1 a 10 o nível de satisfação com a Trybewarts
+Pontos importantes:
+
+Um elemento com o id label-rate e o texto "Como você avalia a Trybewarts?" deverá ser criado
+O campo deve ser formado por dez radio buttons, contendo as opções de 1 a 10
+Os radio buttons devem ter o atributo value com o valor de suas opções de 1 a 10.
+Os radio buttons devem ter o atributo name com o valor "rate"
+Posicione os radio buttons para ficar lado a lado
+Posicione os radio buttons à direita da label -->
