--- a/index.html
+++ b/index.html
@@ -39,6 +39,31 @@
         </select>
       </label>
       </div>
+      <div class="familyAndContentArea">
+        <div class="familyArea">
+
+          <label id="label-family">
+            Qual sua família?
+          </label>
+          <label for="frontend"><input id="frontend" type="radio" name="family" value="Frontend">Frontend</label>
+          <label for="backend"><input id="backend" type="radio" name="family" value="Backend">Backend</label>
+            <label for="fullstack"><input id="fullstack" type="radio" name="family" value="FullStack">Fullstack</label>
+
+
+        </div>
+
+        
+  
+        <div class="contentArea">
+  
+        </div>
+
+      </div>
+      
+
+
+
+
     </form>
     <!--Final do Form-->
 
