--- a/index.html
+++ b/index.html
@@ -47,14 +47,23 @@
           </label>
           <label for="frontend"><input id="frontend" type="radio" name="family" value="Frontend">Frontend</label>
           <label for="backend"><input id="backend" type="radio" name="family" value="Backend">Backend</label>
-            <label for="fullstack"><input id="fullstack" type="radio" name="family" value="FullStack">Fullstack</label>
-
-
+          <label for="fullstack"><input id="fullstack" type="radio" name="family" value="FullStack">Fullstack</label>
         </div>
 
         
   
         <div class="contentArea">
+          <label id="label-content" for="">Qual conteúdo você está com mais vontade de aprender?</label>
+          <div class="checkBoxes">
+          <label for="hofs"> <input id="hofs" type="checkbox" class="subject" value="HoFs">HoFs</label>
+          <label for="jest"> <input id="jest" type="checkbox" class="subject" value="Jest">Jest</label>
+          <label for="promises"> <input id="promises" type="checkbox" class="subject" value="Promises">Promises</label>
+          <label for="react"> <input id="react" type="checkbox" class="subject" value="React">React</label>
+          <label for="sql"> <input id="sql" type="checkbox" class="subject" value="SQL">SQL</label>
+          <label for="python"> <input id="python" type="checkbox" class="subject" value="Python">Python</label>
+
+          </div>
+          
   
         </div>
 
