--- a/index.html
+++ b/index.html
@@ -80,22 +80,26 @@
     <div id="trybewartsLogoArea">
       <img id="trybewarts-forms-logo" src="images/trybewarts-colored.svg">
     </div>    
-    <select id = "house">
+<!--     <select id = "house">
       <option id = "gitnoria-house"></option>
       <option id = "reactpuff-house"></option>
       <option id = "corvinode-house"></option>
       <option id = "pytherina-house"></option>
-    </select>
+    </select> -->
 
-    <div>
-      <label class = "textarea">
-        Deixe seu comentário:
-      </label>
-      <textarea id = "comentario" name = "comentario" rows = "10" cols = "50" maxlength = "500"></textarea>
+    <div id = "message-area">
+      <div>
+        <label class = "textarea">
+          Deixe seu comentário:
+        </label>
+        <textarea id = "comentario" name = "comentario" rows = "10" cols = "50" maxlength = "500"></textarea>
+      </div>
+      <div>
+        <input id = "agreement" type = "checkbox" value = "agreement">
+        <label id = "label-infos" for = "agreement">Você concorda com o uso das informações acima?</label>
+      </div>
+        <button type = "submit" id = "submit-btn">Enviar</button>
     </div>
-    <input id = "agreement" type = "checkbox" value = "agreement">
-    <label id = "label-infos" for = "agreement">Você concorda com o uso das informações acima?</label>
-
   </main>
 
   <footer class = "footer">
