--- a/index.html
+++ b/index.html
@@ -98,7 +98,7 @@
           <input id = "agreement" type = "checkbox" value = "agreement">
           <label id = "label-infos" for = "agreement">Você concorda com o uso das informações acima?</label>
         </div>
-          <button type = "submit" id = "submit-btn">Enviar</button>
+          <button type = "submit" id = "submit-btn" disabled>Enviar</button>
       </div>
 
 
