--- a/index.html
+++ b/index.html
@@ -92,7 +92,8 @@
           <label class = "textarea">
             Deixe seu comentário:
           </label>
-          <textarea id = "comentario" name = "comentario" rows = "10" cols = "50" maxlength = "500"></textarea>
+          <textarea id = "textarea" name = "comentario" rows = "10" cols = "50" maxlength = "500"></textarea>
+          <span id="counter">500</span>
         </div>
         <div>
           <input id = "agreement" type = "checkbox" value = "agreement">
